codigo: PUSH atualização da versão e adição de swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,15 +6,18 @@
 
 
 ## Propriedades da base de dados
-# Uso aqui o H2 em mem\u00f3ria, pode ser file tamb\u00e9m
+# Uso aqui o H2 em memória, pode ser file também
 # spring.datasource.url = jdbc:h2:mem:dbTeste
-spring.datasource.url = jdbc:h2:file:./data/DB;AUTO_SERVER=TRUE;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url = jdbc:h2:file:./data/DB;AUTO_SERVER=TRUE
 spring.datasource.username = root
 spring.datasource.password = 
 
 ## Propriedades do Hibernate
-# O dialeto SQL \u00e9 definido pelo hibernate
+# O dialeto SQL é definido pelo hibernate
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+
+
+springdoc.swagger-ui.path=/
 
