codigo: PUSH atualização de comentários

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,11 @@
-## Exemplos:
-# https://dzone.com/articles/how-to-create-rest-api-with-spring-boot
-# https://dzone.com/articles/spring-boot-restful-web-service-complete-example
-# https://spring.io/guides/gs/rest-service/
-# https://spring.io/guides/gs/accessing-data-rest/
-
-
 ## Propriedades da base de dados
-# Uso aqui o H2 em memória, pode ser file também
-# spring.datasource.url = jdbc:h2:mem:dbTeste
+# a primeira linha usa o H2 em memória
+# spring.datasource.url = jdbc:h2:mem:dbTeste  
+# aqui o uso é em arquivo dentro da pasta 'data' --> url do banco
 spring.datasource.url = jdbc:h2:file:./data/DB;AUTO_SERVER=TRUE
+# usuário do banco
 spring.datasource.username = root
+# senha do banco
 spring.datasource.password = 
 
 ## Propriedades do Hibernate
@@ -18,6 +14,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 
-
+# caminho de acesso ao Swagger OpenAPI
 springdoc.swagger-ui.path=/
 
