--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,10 @@
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>br.org.rfdouro</groupId>
- <artifactId>ExemploSpringRestAPI02</artifactId>
+ <artifactId>ExemploSpringRestAPI</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>
+ <name>ExemploSpringRestAPI</name>
 
  <parent>
   <groupId>org.springframework.boot</groupId>
@@ -58,6 +59,7 @@
   </dependency>
  </dependencies>
  <build>
+  <finalName>ExemploSpringRestAPI</finalName>
   <plugins>
    <plugin>
     <groupId>org.springframework.boot</groupId>
