ajuste na execução 02 2025_02_26_15:54

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Executar a aplicação
         run: |
           pkill -f "java -jar" || true  # Encerra a aplicação atual (se estiver rodando)
-          nohup java -jar /root/actions-runner/_work/ExemploSpringRestAPI/ExemploSpringRestAPI/target/ExemploSpringRestAPI.jar > app.log 2>&1 &
+          nohup java -jar /root/actions-runner/_work/ExemploSpringRestAPI/ExemploSpringRestAPI/target/ExemploSpringRestAPI.jar
