ajuste no deploy 2025_02_26_16:59

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,14 +21,13 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      - name: Parar o serviço
+        run: systemctl stop exemploapi
+
       # Passo 3: Buildar a aplicação com Maven
       - name: Buildar com Maven
         run: mvn clean package
 
       # Passo 4: Executar a aplicação Spring Boot
       - name: Executar a aplicação
-        run: |
-          # pkill -f "java -jar" || true  # Encerra a aplicação atual (se estiver rodando )
-          # nohup java -jar /root/actions-runner/_work/ExemploSpringRestAPI/ExemploSpringRestAPI/target/ExemploSpringRestAPI.jar
-          systemctl stop exemploapi
-          systemctl start exemploapi
+        run: systemctl start exemploapi
