--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.url = jdbc:h2:file:./data/DB;AUTO_SERVER=TRUE
 spring.datasource.username = root
 # senha do banco
 spring.datasource.password = 
+server.address=0.0.0.0
 
 ## Propriedades do Hibernate
 # O dialeto SQL é definido pelo hibernate
