--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,11 @@ spring.jpa.hibernate.ddl-auto = update
 # caminho de acesso ao Swagger OpenAPI
 springdoc.swagger-ui.path=/
 
+# Habilita CORS e permite todas as origens
+spring.mvc.cors.enabled=true
+spring.mvc.cors.allowed-origins=*
+spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.mvc.cors.allowed-headers=*
+spring.mvc.cors.exposed-headers=*
+spring.mvc.cors.allow-credentials=true
+
