--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,10 +19,10 @@ spring.jpa.hibernate.ddl-auto = update
 springdoc.swagger-ui.path=/
 
 # Habilita CORS e permite todas as origens
-spring.mvc.cors.enabled=true
-spring.mvc.cors.allowed-origins=*
-spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.mvc.cors.allowed-headers=*
-spring.mvc.cors.exposed-headers=*
-spring.mvc.cors.allow-credentials=true
+management.endpoints.web.cors.allowed-origins=*
+management.endpoints.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+management.endpoints.web.cors.allowed-headers=*
+management.endpoints.web.cors.exposed-headers=*
+management.endpoints.web.cors.allow-credentials=true
+
 
