--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,10 +20,10 @@ springdoc.swagger-ui.path=/
 
 # https://docs.spring.io/spring-boot/reference/actuator/endpoints.html#actuator.endpoints.cors
 # Habilita CORS e permite todas as origens
-management.endpoints.web.cors.allowed-origins=*
-management.endpoints.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-management.endpoints.web.cors.allowed-headers=*
-management.endpoints.web.cors.exposed-headers=*
-management.endpoints.web.cors.allow-credentials=true
+#management.endpoints.web.cors.allowed-origins=*
+#management.endpoints.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+#management.endpoints.web.cors.allowed-headers=*
+#management.endpoints.web.cors.exposed-headers=*
+#management.endpoints.web.cors.allow-credentials=true
 
 
