--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,9 @@
 # a primeira linha usa o H2 em memória
 # spring.datasource.url = jdbc:h2:mem:dbTeste  
 # aqui o uso é em arquivo dentro da pasta 'data' --> url do banco
-spring.datasource.url = jdbc:h2:file:./data/DB;AUTO_SERVER=TRUE
+#spring.datasource.url = jdbc:h2:file:./data/DB;AUTO_SERVER=TRUE
+spring.datasource.url = jdbc:h2:file:./data/DB;MODE=MYSQL;DATABASE_TO_LOWER=TRUE
+
 # usuário do banco
 spring.datasource.username = root
 # senha do banco
